<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.apsu.csci.CalorieCounter.activities.MenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/app_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:text="@string/menu"
            android:textSize="20sp" />

        <Button
            android:id="@+id/to_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:text="@string/to_menu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp">

        <ImageButton
            android:id="@+id/left_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/left_arrow"
            android:contentDescription="@string/previous_day"/>

        <TextView
            android:id="@+id/weekday_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/select_date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/set_date_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weekday_text_view"
            android:layout_centerHorizontal="true"
            android:inputType="date"
            android:focusable="false"
            android:hint="@string/date_format"
            tools:text="03/30/2020" />

        <ImageButton
            android:id="@+id/right_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/right_arrow"
            android:contentDescription="@string/next_day" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/menu_scroll_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".16"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".16"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
